theme, scrollbar, fixed

--- a/src/styles/blocks/body.scss
+++ b/src/styles/blocks/body.scss
@@ -6,33 +6,6 @@
     background-color: var(--c-gray-lighter);
     container: meta-container teaser-container / inline-size;
 
-    --c-white: #{$color-white};
-    --c-gray-lightest: #{$color-gray-lightest};
-    --c-gray-lighter: #{$color-gray-lighter};
-    --c-gray-light: #{$color-gray-light};
-    --c-gray: #656565;
-    --c-gray-dark: #{$color-gray-dark};
-    --c-gray-darker: #{$color-gray-darker};
-    --c-gray-darkest: #{$color-gray-darkest};
-    --c-nav: #{$color-nav-light};
-    --c-black: #{$color-black};
-
-    --c-main: #{$color-main};
-    --c-main-dark: #{$color-main-dark};
-
-    &--dark {
-        --c-white: #{$color-black};
-        --c-gray-lightest: #{$color-gray-darkest};
-        --c-gray-lighter: #{$color-gray-darker};
-        --c-gray-light: #{$color-gray-dark};
-        --c-gray: #{$color-gray};
-        --c-gray-dark: #{$color-gray-light};
-        --c-gray-darker: #{$color-gray-lighter};
-        --c-gray-darkest: #{$color-gray-lightest};
-        --c-nav: #{$color-nav};
-        --c-black: #{$color-white};
-    }
-
     &--fixed {
         overflow: hidden;
     }
